Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-45705

QGLXContext::makeCurrent fails on offscreen surfaces ( sharing with native context )

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.5.0
    • 5.5.1
    • GUI: OpenGL, QPA: X11/XCB
    • None
    • Debian Linux 8.0
      Nvidia 470Gtx GPU with 343.36 drivers

    Description

      When doing something like this:

          QOpenGLContext *native_context_wrapper = wrapeExternalContext();
          QOpenGLContext *qt_context = new QOpenGLContext();
          qt_context->setShareContext(native_context_wrapper);
          qt_context->setFormat(native_context_wrapper->format());
          if (!qt_context->create())
              qFatal("Cannot create the requested OpenGL context!");
          QOffscreenSurface *offsceen_surface = new QOffscreenSurface;
          offsceen_surface->setFormat(qt_context->format());
          offsceen_surface->create();
          qt_context->makeCurrent(offsceen_surface); //failure point
      

      results in :

      X Error of failed request:  BadWindow (invalid Window parameter)
        Major opcode of failed request:  155 (GLX)
        Minor opcode of failed request:  16 (X_GLXVendorPrivate)
        Resource id in failed request:  0x3000009
        Serial number of failed request:  0
        Current serial number in output stream:  432
      

      I've managed to track it down to an attempt to set glx swap interval on the context. This seems relevant somewhat ?

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lagocs Laszlo Agocs
            nemerle Artur K.
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes