Avoid setting a swap interval for pbuffers

As per GL_EXT_swap_control this results in BadWindow.

Task-number: QTBUG-45705
Change-Id: Ia3e3f66f326d8f6145d82f33f964b0d6996f0959
Reviewed-by: Gunnar Sletta <gunnar@sletta.org>